gcc/testsuite/rust/rustc/ui/const-generics/ice-const-generic-function-return-ty_dg.rs
// #95163
fn return_ty() -> impl Into<<() as Reexported;
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

